			Java Electric change log

************************* Version 8.00: Released  *************************

IMP: (6/15/04, SMR) Changed all "dialog.show()" calls to "dialog.setVisible(true)" because of deprecation in 1.5.

IMP: (6/15/04, SMR) Implemented "Window / Center / Selection" and "Window / Center / Cursor".

IMP: (6/15/04, SMR) Implemented cell locking.

IMP: (6/15/04, SMR) Implemented graphing of cell structure.

IMP: (6/15/04, SMR) "Change current library" and "Change" dialogs accept double-click to terminate.

IMP: (6/14/04, SMR) Implemented SPICE writing in lambda units.

IMP: (6/14/04, GVG) More stable version of crosslibcopy with compare functions. Refactoring for getProtoName, getLibName, setLibName, getProtoNamekey

IMP: (6/13/04, SMR) Implemented ability to preserve design rules in preferences.

IMP: (6/12/04, SMR) Readable dump input can handle cross-library references.

IMP: (6/12/04, SMR) Implemented smart text placement (Edit Options, "Text" tab).

IMP: (6/12/04, SMR) Implemented automatic "blobs" where multiple arcs connect to a schematic port.

IMP: (6/12/04, SMR) Implemented "Look Inside Highlighted".

BUG: (6/12/04, SMR) When arcs jog, the R-Tree is damaged.
FIX: In "database.constraint.Layout.java", do not apply constraints to arcs that have been jogged.

BUG: (6/12/04, GVG) SelectedItem in right library pulldown list not correctly set.
FIX: In CrossLibCopy.java: same index as in left assigned (both should correspond to current)

IMP: (6/11/04, SMR) Implemented "Artwork Appearance" dialog for editing Artwork primitives.

IMP: (6/11/04, GVG) Message in WriteLib if no write access. Unified version of coverage implant, merge polygons and
layer coverage calculation. New idea for icon of current library selected in ExplorerTree.

IMP: (6/11/04, RK) Move fill generation to a script. Add Essential-Bounds to tiled fill cells. 

IMP: (6/10/04, SMR) Changed the Job.doIt() method to return a success indicator.
